fix dark mode dataview menus

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -53,7 +53,7 @@ html.themeDark {
 
     /* Button */
 
-    .button.grey { color: $colorPrimary; box-shadow: 0px 0px 0px 1px $colorLineSecondary inset; }
+    .button.grey { color: $colorPrimary; box-shadow: 0px 0px 0px 1px $colorLineSecondary inset; background: $colorHover; }
     .button.grey:hover { box-shadow: 0px 0px 0px 1px $colorLinePrimary inset; }
 
     .button.blank { border-color: $colorLineSecondary; }
